--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,19 @@ body {
 }
 
 
+.accordion-item {
+  margin-bottom: 1rem;
+}
+
+.accordion-button {
+  font-size: 1.25rem;
+}
+
+.accordion-body {
+  font-size: 1rem;
+}
+
+
 // footer 
 
 footer {
